--- a/style.css
+++ b/style.css
@@ -47,4 +47,89 @@ body{
     outline: none;
 }
 
+#weather{
+    display: none;
+    margin-top: 20px;
+}
 
+#weather.show{
+    display: block;
+}
+
+#tittle{
+    text-align: center;
+    margin-top: 5px;
+    font-weight: 600;
+    color: #3f372f;
+}
+
+#temp{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    gap: 20px;
+    background: linear-gradient(90deg, #5a7cdc, #606dde);
+    color: #fff;
+    border-radius: 20px;
+    padding: 20px;
+}
+
+#temp_img{
+    filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.2));
+}
+
+#temp_value{
+    font-weight: bold;
+    font-size: 50px;
+    line-height: 55px;
+}
+
+#temp_description{
+    font-weight: 500;
+    text-transform: capitalize;
+}
+
+#other_infos{
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 12px;
+}
+
+#other_infos .info{
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    padding: 4px 10px;
+    border-radius: 8px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+    background-color: #fff;
+    gap: 10px;
+}
+
+#other_infos .info h2{
+    font-size: 12px;
+    font-weight: 600;
+}
+
+#other_infos .info i{
+    text-align: center;
+    font-size: 20px;
+    width: 20%;
+}
+
+#temp_max_icon{
+    color: #7f1d1d;
+}
+
+#temp_min_icon{
+    color: #0284c7;
+}
+
+#humidity_icon{
+    color: #0ea5e9;
+}
+
+#wind_icon{
+    color: #7c3aed;
+}
